# pydgens

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  SPDX.spdx  pyproject.toml  zensical.toml
.github/workflows/: benchmark.yml  docs.yml  publish.yml  python-builds.yml
docs/: api.md  examples.md  index.md  license.md  profile.md  references.md  solvers.md  testing.md
scripts/ci/benchmark/: log_env.sh  summarize_bench.py
scripts/visuals/: lady_bandit_guard_nonlinear_plot.py  lady_bandit_guard_plot.py  multi_car_intersection_gif.py  satellite_lady_bandit_guard_gif.py
src/pydgens/: __init__.py
src/pydgens/examples/: _ir_reporting.py  aeriallbg1.py  aeriallbg1_cfg.json  al_solve_example_1.py  al_solve_example_xxx.py  constrained_integrators.py  doubleint.py  doubleint_lqlbg.json  ir_constrained_double_integrator_diagnostic.py  ir_constrained_integrators.py  ir_lady_bandit_guard.py  ir_lady_bandit_guard_nonlinear.py  ir_unicycle.py  multi_car_intersection.py  run_aeriallbg1.py  run_doubleint_lqlbg.py  run_unicycle1.py  satellite_lady_bandit_guard.py  tug_o_war.py  unicycle.py  (+1 more)
tests/: runtime_analysis.py  test_alsolver.py  test_constrainttypes.py  test_costtypes.py  test_gametypes.py  test_ilqsolver.py  test_lqsolver.py  test_strategytypes.py  test_systemtypes.py  test_timetypes.py  test_trajectorytypes.py  test_utils.py
tests/examples/: test_aeriallbg1.py  test_constrained_integrators.py  test_doublint.py  test_ir_lady_bandit_guard.py  test_ir_lady_bandit_guard_nonlinear.py  test_ir_unicycle.py  test_multi_car_intersection.py  test_satellite_lady_bandit_guard.py  test_tug_o_war.py  test_unicycle.py  test_unicycle1.py
tests/frontend/: test_constraints.py  test_costs.py  test_dynamics.py  test_games.py  test_players.py  test_solvers.py
(+34 files in other folders)
